--- a/packages/data-collector/package.json
+++ b/packages/data-collector/package.json
@@ -5,9 +5,15 @@
   "homepage": ".",
   "dependencies": {
     "@eyra/feldspar": "^0.1.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/text": "^3.12.0",
+    "@visx/wordcloud": "^3.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-highlight-words": "^0.21.0",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.15.2",
+    "zod": "^3.24.2"
   },
   "scripts": {
     "start": "react-scripts start",
