Added github workflows
removed unused github workflows

gh pages fix

added npm flag

added npm flag

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -41,7 +41,7 @@ jobs:
           poetry build --format wheel
 
       - name: Install Node Dependencies
-        run: npm ci
+        run: npm i --legacy-peer-deps
 
       - name: Copy Python Wheel
         run: |
